Remove the activate invite function

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/toggle-bootstrap.min.css">
     <link rel="stylesheet" href="css/fa.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Idena Invites Tools</title>
+    <title>Idena Invites Tracker</title>
 </head>
 
 <body class="bootstrap-dark">
 
     <nav class="navbar navbar-expand-lg navbar-dark mb-5" style="background-color:rgb(47, 50, 51)!important;">
-        <a class="navbar-brand ml-2" href="#">Idena Invites Tools</a>
+        <a class="navbar-brand ml-2" href="#">Idena Invites Tracker</a>
     </nav>
 
 
@@ -34,39 +34,11 @@
                         aria-expanded="True" aria-controls="collapseExample">
                         Invite(s) Checker
                     </button>
-                    <button class="btn btn-primary" type="button" data-toggle="collapse"
-                        data-target="#collapseInviteSender" aria-expanded="True" aria-controls="collapseExample">
-                        Invite Sender
-                    </button>
+                    
                 </p>
 
 
 
-                <div class="collapse mb-3" id="collapseInviteSender">
-                    <div class="card card-body">
-                        <p>Invite Sender</p>
-                        <div class="row">
-                            <div class="col-9">
-                                <small class="form-text m-0 mb-1">Address</small>
-                                <input type="text" class="form-control mb-1" id="Address-Sender"
-                                    placeholder="0xb30348813590e02907da79e1c46fba4edca5a2d8"></input>
-                                <small  class="form-text m-0 mb-1">Inivte</small>
-                                <input type="text" class="form-control mb-1" id="Invite-Sender"
-                                    placeholder="2dd3a5c94fcfa5bde231b5d2bdad294c3e04db51325d51d54bc7076a69daac14"></input>
-                            </div>
-                            <div class="col-3">
-                                <small 
-                                    class="form-text m-0 mb-1 text-center">Actions</small>
-                                <div class="text-center">
-
-                                    <br>
-                                    <button type="button" class="btn btn-outline-success m-1 "
-                                        onclick="sendLevel1();">Send</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="collapse show " id="collapseChcker">
 
@@ -139,7 +111,6 @@
         </div>
 
     </div>
-    <script src="js/bundle.js"></script>
     <script src="js/script.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
