--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>
                     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseChcker"
                         aria-expanded="True" aria-controls="collapseExample">
-                        Invite(s) Checker
+                        Invite(s) Tracker
                     </button>
                     
                 </p>
@@ -45,7 +45,7 @@
 
 
                     <div class="card card-body">
-                        <p>Invite(s) Checker</p>
+                        <p>Invite(s) Tracker</p>
                         <div class="row">
                             <div class="col-9">
                                 <small  class="form-text m-0 mb-1">Inivtes list</small>
