--- a/index.html
+++ b/index.html
@@ -1,144 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/toggle-bootstrap-dark.min.css" />
-    <link rel="stylesheet" href="css/toggle-bootstrap.min.css" />
-    <link rel="stylesheet" href="css/fa.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Idena Invites Tracker</title>
-  </head>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <body class="bootstrap-dark">
-    <nav
-      class="navbar navbar-expand-lg navbar-dark mb-5"
-      style="background-color: rgb(47, 50, 51) !important"
-    >
-      <a class="navbar-brand ml-2" href="#">Idena Invites Tracker</a>
-    </nav>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/toggle-bootstrap-dark.min.css" />
+  <link rel="stylesheet" href="css/toggle-bootstrap.min.css" />
+  <link rel="stylesheet" href="css/fa.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Idena Invites Tracker</title>
+</head>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <p>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-toggle="collapse"
-              data-target="#collapseChcker"
-              aria-expanded="True"
-              aria-controls="collapseExample"
-            >
-              Invite(s) Tracker
-            </button>
-          </p>
+<body class="bootstrap-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark mb-5" style="background-color: rgb(47, 50, 51) !important">
+    <a class="navbar-brand ml-2" href="#">Idena Invites Tracker</a>
+  </nav>
 
-          <div class="collapse show" id="collapseChcker">
-            <div class="card card-body">
-              <p>Invite(s) Tracker</p>
-              <div class="row">
-                <div class="col-9">
-                  <small class="form-text m-0 mb-1">Invites list</small>
-                  <textarea
-                    type="text"
-                    class="form-control mb-1"
-                    id="Invites-textarea"
-                    rows="3"
-                    placeholder="2dd3a5c94fcfa5bde231b5d2bdad294c3e04db51325d51d54bc7076a69daac14
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p>
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseChcker"
+            aria-expanded="True" aria-controls="collapseExample">
+            Invite(s) Tracker
+          </button>
+        </p>
+
+        <div class="collapse show" id="collapseChcker">
+          <div class="card card-body">
+            <p>Invite(s) Tracker</p>
+            <div class="row">
+              <div class="col-9">
+                <small class="form-text m-0 mb-1">Invites list</small>
+                <textarea type="text" class="form-control mb-1" id="invites-textarea" rows="3" placeholder="2dd3a5c94fcfa5bde231b5d2bdad294c3e04db51325d51d54bc7076a69daac14
 143cecd928c2f75e26563676d9e8c355c3c59b83cf14a0b7a9e768bd7914ae18
-                                    "
-                  ></textarea>
-                </div>
-                <div class="col-3">
-                  <small class="form-text m-0 mb-1 text-center">Actions</small>
-                  <div class="text-center">
-                    <button
-                      type="button"
-                      class="btn btn-outline-warning m-1"
-                      onclick="level0('used');"
-                    >
-                      Check if Used
-                    </button>
-                    <br />
-                    <button
-                      type="button"
-                      class="btn btn-outline-success m-1"
-                      onclick="level0('passed');"
-                    >
-                      Check if Passed
-                    </button>
-                  </div>
+                                    "></textarea>
+              </div>
+              <div class="col-3">
+                <small class="form-text m-0 mb-1 text-center">Actions</small>
+                <div class="text-center">
+                  <button type="button" class="btn btn-outline-warning m-1" onclick="startChecker();">
+                    Check if Used
+                  </button>
+                  <br />
+                  <button type="button" class="btn btn-outline-success m-1" onclick="startChecker(true);">
+                    Check if Passed
+                  </button>
                 </div>
               </div>
             </div>
-            <div class="collapsed show mt-3 mb-5" id="collapseResults">
-              <div class="row d-flex justify-content-center pb-3">
-                <div class="col-12">
-                  <div class="card p-4">
-                    <span class="text-white h5 m-auto">
-                      <span class="text-danger"
-                        >-- <span id="Invalid-Count">0</span> Invalid --</span
-                      >
-                      <span class="text-info"
-                        >-- <span id="NotUsed-Count">0</span> NotUsed --</span
-                      >
-                      <span class="text-warning"
-                        >-- <span id="Used-Count">0</span> Used --</span
-                      >
-                      <span class="text-success"
-                        >-- <span id="Passed-Count">0</span> Passed --</span
-                      >
-                    </span>
-                    <br />
-                    <div class="progress" style="height: 5px">
-                      <div
-                        class="progress-bar progress-bar-striped progress-bar-animated"
-                        id="Invites-Progress"
-                        role="progressbar"
-                        aria-valuenow="100"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="width: 100%"
-                      ></div>
+          </div>
+          <div class="collapsed show mt-3 mb-5" id="collapseResults">
+            <div class="row d-flex justify-content-center pb-3">
+              <div class="col-12">
+                <div class="card p-4">
+                  <span class="text-white h5 m-auto">
+                    <span class="text-danger">-- <span id="Invalid-Count">0</span> Invalid --</span>
+                    <span class="text-info">-- <span id="NotUsed-Count">0</span> NotUsed --</span>
+                    <span class="text-warning">-- <span id="Used-Count">0</span> Used --</span>
+                    <span class="text-success">-- <span id="Passed-Count">0</span> Passed --</span>
+                  </span>
+                  <br />
+                  <div class="progress" style="height: 5px">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" id="Invites-Progress"
+                      role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-12 table-responsive text-nowrap">
-                <table class="table text-center">
-                  <thead>
-                    <tr>
-                      <th scope="col" style="border-color: #fff">Invite</th>
-                      <th scope="col" style="border-color: #fff">Type</th>
-                    </tr>
-                  </thead>
-                  <tbody id="Invites-Table"></tbody>
-                </table>
-              </div>
+            </div>
+            <div class="col-12 table-responsive text-nowrap">
+              <table class="table text-center">
+                <thead>
+                  <tr>
+                    <th scope="col" style="border-color: #fff">Invite</th>
+                    <th scope="col" style="border-color: #fff">Type</th>
+                  </tr>
+                </thead>
+                <tbody id="Invites-Table"></tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="js/script.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="js/bootstrap.min.js"></script>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
